# cpp_nn

./: .gitignore  CMakeLists.txt  Cusp.json  LICENSE  Makefile  README.MD
cpp_nn/include/: model.h  rng.h  tensor.h  util.h
cpp_nn/src/: main.cpp
include/: rng.h  tensor.h  util.h
src/: main.cpp
